# intervaltree

./: .gitignore  pyproject.toml  runtest.sh  setup.py
intervaltree/: intervaltree.c  intervaltree.html  intervaltree.pyx
