[project]
name = "intervaltree"
description = "Editable interval tree data structure for Python 2 and 3'"
version = "4.0.0"
license = {file = "LICENSE.txt"}
readme = "README.md"
authors = [
]
requires-python = ">=3.8"

dependencies = [
    "Cython",
    "cython",
]


[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython>=0.29.30,<3.0"]
build-backend = "setuptools.build_meta"